@@ -43,6 +43,9 @@ CMF 1.5.0-beta (unreleased)
       
   Bug Fixes
 
+    - CMFDefault.Image: When pasting an Image object the review state did not
+      revert to "private" (http://www.zope.org/Collectors/CMF/176)
+
     - CMFSetup: Refactored rolemap.
       Converted the roles attribute to role sub-elements. Fixed an acquisition
       bug that caused incomplete exports. Updated default profile.
